--- a/test/test-ring.html
+++ b/test/test-ring.html
@@ -5,15 +5,23 @@
 		<script src = "../src/sisiliano.js"></script>
 		
 		<style>
-			.svg {
-			  position: relative;
-			  display: inline-block;
-			  width: 70%;
-			  height: 100%;
+			.test {
+				position: relative;
+				display: inline-block;
+				height: 90%
 			}
 			
 			.description {
-				display: inline-block;
+				padding: 5px;
+				background: rgba(0, 0, 0, 0.78);
+				color: white;
+				font-style: italic;
+				margin-bottom: 10px;
+			}
+			
+			body {
+				padding: 0px;
+				margin: 0px;
 			}
 			
 			td {
@@ -27,12 +35,15 @@
 		</style>
 		<script>
 			$(document).on('ready', function() {
-				$('.svg').ringCtrl();
+				//$('.svg').ringCtrl();
 				
-				var tds = $('td');
-				
+				var tds = $('.test');
+				var colors = ['green', 'blue', 'yellow', 'red', 'orange', 'blue'];
 				for (var i = 0; i < tds.length; i++) {
-					$(tds[i]).ringCtrl();
+					$(tds[i]).ringCtrl({
+						accentColor: colors[i],
+						value: Math.random() * 100
+					});
 				}
 			});
 			
@@ -41,9 +52,6 @@
 	</head>
 	<body>
 		
-		<div class="svg">		
-			
-		</div>
 		<div class="description">
 			<ul>
 				<li>Click or use the tab to focus it</li>
@@ -52,25 +60,15 @@
 			</ul>
 		</div>
 		
-		<table border="1">
-			<tr>
-				<td></td>
-				<td></td>
-				<td></td>
-				<td></td>
-			</tr>
-			<tr>
-				<td></td>
-				<td></td>
-				<td></td>
-				<td></td>
-			</tr>
-			<tr>
-				<td></td>
-				<td></td>
-				<td></td>
-				<td></td>
-			</tr>
-		</table>
+		
+		<div class="test" style="width: 35%"></div>
+		<div class="test" style="width: 25%"></div>
+		<div class="test" style="width: 20%"></div>
+		<div class="test" style="width: 15%"></div>
+		
+		
+
+		
+		
 	</body>
 </html>
