--- a/test/test-ring.html
+++ b/test/test-ring.html
@@ -1,9 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<link rel = "stylesheet" href = "../src/sisiliano.css">
-		<script src = "../lib/jquery.js"></script>
-		<script src = "../src/sisiliano.js"></script>
-		
+		<meta charset="utf-8"/>
+		<link href = "../dist/sisiliano.min.css" rel = "stylesheet" />
+		<script src = "../bower_components/jquery/dist/jquery.js"></script>
+		<script src = "../dist/sisiliano.min.js"></script>
 		<style>
 			.test {
 				position: relative;
@@ -24,14 +25,6 @@
 				margin: 0px;
 			}
 			
-			td {
-				height: 100px;
-				width: 25%;
-			}
-			
-			table {
-				width: 100%;
-			}
 		</style>
 		<script>
 			$(document).on('ready', function() {
@@ -46,12 +39,9 @@
 					});
 				}
 			});
-			
-			
 		</script>
 	</head>
 	<body>
-		
 		<div class="description">
 			<ul>
 				<li>Click or use the tab to focus it</li>
@@ -59,16 +49,9 @@
 				<li>resize the window to test the Responsiveness</li>
 			</ul>
 		</div>
-		
-		
 		<div class="test" style="width: 35%"></div>
 		<div class="test" style="width: 25%"></div>
 		<div class="test" style="width: 20%"></div>
 		<div class="test" style="width: 15%"></div>
-		
-		
-
-		
-		
 	</body>
 </html>
