--- a/test/test-ring.html
+++ b/test/test-ring.html
@@ -31,7 +31,7 @@
 				//$('.svg').ringCtrl();
 				
 				var tds = $('.test');
-				var colors = ['green', 'blue', 'yellow', 'red', 'orange', 'blue'];
+				var colors = ['#009688', 'blue', 'yellow', 'red', 'orange', 'blue'];
 				for (var i = 0; i < tds.length; i++) {
 					$(tds[i]).ringCtrl({
 						accentColor: colors[i],
