--- a/demo/test-ring.html
+++ b/demo/test-ring.html
@@ -34,7 +34,7 @@
         var colors = ['#009688', 'blue', 'yellow', 'red', 'orange', 'blue'];
         for (var i = 0; i < tds.length; i++) {
           $(tds[i]).ringCtrl({
-            accentColor: colors[i],
+            color: colors[i],
             value: Math.random() * 100
           });
         }
