--- a/test/html/ring.html
+++ b/test/html/ring.html
@@ -4,6 +4,8 @@
     <link rel = "stylesheet" href = "../../bower_components/qunit/qunit/qunit.css">
     <link rel = "stylesheet" href = "../../dist/sisiliano.min.css">
     <script src = "../../bower_components/jquery/dist/jquery.js"></script>
+    <script src = "../../lib/jquery.ui.core.js"></script>
+    <script src = "../../lib/infusion-framework.js"></script>
     <script src = "../../bower_components/qunit/qunit/qunit.js"></script>
     <script src = "../../dist/sisiliano.min.js"></script>
     <script src = "../spec/helpers.js"></script>
