--- a/demo/test-ring.html
+++ b/demo/test-ring.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8"/>
     <link href = "../dist/sisiliano.min.css" rel = "stylesheet" />
     <script src = "../bower_components/jquery/dist/jquery.js"></script>
+    <script src = "../lib/jquery.ui.core.js"></script>
+    <script src = "../lib/infusion-framework.js"></script>
     <script src = "../dist/sisiliano.min.js"></script>
     <style>
       .test {
@@ -33,10 +35,11 @@
         var tds = $('.test');
         var colors = ['#009688', 'blue', 'yellow', 'red', 'orange', 'blue'];
         for (var i = 0; i < tds.length; i++) {
-          $(tds[i]).ringCtrl({
+          var elm=new sisiliano.knob($('.test')[i], {
             color: colors[i],
             value: Math.random() * 100
           });
+          elm.draw();
         }
         
         $(window).on('load resize', function() {
