Restructured the project
* seperated templates, css, and js into three folders
* updated the root name of the library

--- a/demo/test-ring.html
+++ b/demo/test-ring.html
@@ -35,7 +35,7 @@
         var tds = $('.test');
         var colors = ['#009688', 'blue', 'yellow', 'red', 'orange', 'blue'];
         for (var i = 0; i < tds.length; i++) {
-          var elm=new sisiliano.knob($('.test')[i], {
+          var elm=new fluid.sisiliano.knob($('.test')[i], {
             color: colors[i],
             value: Math.random() * 100
           });
