--- a/demo/test-ring.html
+++ b/demo/test-ring.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <link href = "../dist/sisiliano.min.css" rel = "stylesheet" />
-    <script src = "../bower_components/jquery/dist/jquery.js"></script>
-    <script src = "../lib/jquery.ui.core.js"></script>
-    <script src = "../lib/infusion-framework.js"></script>
+    <script src = "../lib/infusion/infusion-custom.js"></script>
     <script src = "../dist/sisiliano.min.js"></script>
     <style>
       .test {
@@ -39,7 +37,7 @@
             color: colors[i],
             value: Math.random() * 100
           });
-          elm.draw();
+          //elm.draw();
         }
         
         $(window).on('load resize', function() {
