--- a/demo/test-ring.html
+++ b/demo/test-ring.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8"/>
     <link href = "../dist/sisiliano.min.css" rel = "stylesheet" />
-    <script src = "../lib/infusion/infusion-custom.js"></script>
+    <script src = "../lib/infusion/infusion-all.js"></script>
+    <script src = "../bower_components/handlebars/handlebars.js"></script>
+    <script src = "../bower_components/handlebars/handlebars.runtime.js"></script>
     <script src = "../dist/sisiliano.min.js"></script>
     <style>
       .test {
