--- a/test/html/ring.html
+++ b/test/html/ring.html
@@ -3,11 +3,13 @@
   <head>
     <link rel = "stylesheet" href = "../../bower_components/qunit/qunit/qunit.css">
     <link rel = "stylesheet" href = "../../dist/sisiliano.min.css">
-    <script src = "../../lib/infusion/infusion-custom.js"></script>
+    <script src = "../../lib/infusion/infusion-all.js"></script>
     <script src = "../../bower_components/qunit/qunit/qunit.js"></script>
+    <script src = "../../lib/handlebars/handlebars-1.0.rc.2.js"></script>
     <script src = "../../dist/sisiliano.min.js"></script>
     <script src = "../spec/helpers.js"></script>
     <script src = "../spec/ring.spec.js"></script>
+    <script src = "../spec/piano.js"></script>
   </head>
   <body>
     <div id="qunit"></div>
