--- a/demo/piano.html
+++ b/demo/piano.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="utf-8"/>
   <link href = "../dist/sisiliano.min.css" rel = "stylesheet" />
-  <script src = "../bower_components/jquery/dist/jquery.js"></script>
-  <script src = "../lib/jquery.ui.core.js"></script>
-  <script src = "../lib/infusion-framework.js"></script>
-  <script src = "../dist/sisiliano.min.js"></script>
+  <script src = "../lib/infusion/infusion-all.js"></script>
+  <script src = "../lib/handlebars/handlebars-1.0.rc.2.js"></script>
+  <script src = "../dist/templates.js"></script>
+  <script src = "../src/index.js"></script>
+  <script src = "../src/controllers/piano.js"></script>
   <style>
     .test {
       position: relative;
-      display: inline-block;
-      height: 90%
+      height: 20%;
+      padding: 20px;
     }
 
     .description {
@@ -25,6 +26,7 @@
     body {
       padding: 0px;
       margin: 0px;
+      background-color: #8BC34A;
     }
 
   </style>
@@ -36,24 +38,40 @@
       var colors = ['#009688', 'blue', 'yellow', 'red', 'orange', 'blue'];
       for (var i = 0; i < tds.length; i++) {
         var elm = new fluid.sisiliano.piano($('.test')[i], {
-          color: colors[i]
+          color: colors[i],
+          dataModel: {
+            f: [1, 2, 3]
+          }
         });
       }
-
-      $(window).on('load resize', function() {
-        $('.test').height($(window).height() - $('.description').height() - 10);
-      });
     });
   </script>
 </head>
 <body>
 <div class="description">
-  <ul>
-  </ul>
+  <h1>Piano</h1>
+  This component was introduced for the purpose of testing the instruments created using flocking framework. So, the
+  instrument created using the flocking shall be passed as parameter to the component. Also the primary color, starting
+  note and the length of the piano also can be modified through parameters.
+  <br>
+  <br>
+  This component is fully responsive and developed using an SVG. Also this is also accessible via the keyboard.
+  So, the active area which can be controlled by the keyboard is highlighted in the piano. And the highlighted area
+  can be moved to left and right using arrow keys.
+  <pre>
+    new fluid.sisiliano.piano($('#elm'), {
+      instrument: instrument,
+      color: "#009688",
+      keyBoard: {
+        length: 50,
+        start: 3,
+      }
+    });
+  </pre>
 </div>
-<div class="test" style="width: 35%"></div>
+<div class="test" style="width: 100%"></div>
+<div class="test" style="width: 75%"></div>
+<div class="test" style="width: 50%"></div>
 <div class="test" style="width: 25%"></div>
-<div class="test" style="width: 20%"></div>
-<div class="test" style="width: 15%"></div>
 </body>
 </html>
