Updated the knob demo
* made the background color White

--- a/demo/knob.html
+++ b/demo/knob.html
@@ -96,7 +96,7 @@
                     color: colors[randomColorIndex],
                     value: Math.random() * 100
                 });
-                $(tds[i]).css("background-color", colors[randomColorIndex - 1]);
+                //$(tds[i]).css("background-color", colors[randomColorIndex - 1]);
             }
 
             /*$(".test-outer").each(function() {
