--- a/demo/knob.html
+++ b/demo/knob.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8"/>
 
-    <link href="../dist/sisiliano.min.css" rel="stylesheet"/>
-    <script src="../lib/infusion/infusion-all.js"></script>
-    <script src="../dist/sisiliano.min.js"></script>
+    <link href="./source/dist/sisiliano.min.css" rel="stylesheet"/>
+    <script src="./source/lib/infusion/infusion-all.js"></script>
+    <script src="./source/lib/handlebars/handlebars-1.0.rc.2.js"></script>
+    <script src="./source/dist/sisiliano.min.js"></script>
 
-
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet"/>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <link href="./source/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="./source/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet"/>
+    <script src="./source/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <style>
         .description {
