--- a/test/html/index.html
+++ b/test/html/index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="../../bower_components/qunit/qunit/qunit.css">
     <link rel="stylesheet" href="../../dist/sisiliano.min.css">
     <script src="../../lib/handlebars/handlebars-1.0.rc.2.js"></script>
+    <script src="../../bower_components/d3/d3.min.js"></script>
     <script src="../../bower_components/qunit/qunit/qunit.js"></script>
     <script src="../../lib/infusion/infusion-all.js"></script>
     <script src="../../lib/infusion/jqUnit.js"></script>
