--- a/test/html/index.html
+++ b/test/html/index.html
@@ -2,10 +2,10 @@
 <head>
     <link rel="stylesheet" href="../../bower_components/qunit/qunit/qunit.css">
     <link rel="stylesheet" href="../../dist/sisiliano.min.css">
+    <script src="../../lib/infusion/infusion-all.js"></script>
     <script src="../../lib/handlebars/handlebars-1.0.rc.2.js"></script>
     <script src="../../bower_components/d3/d3.min.js"></script>
     <script src="../../bower_components/qunit/qunit/qunit.js"></script>
-    <script src="../../lib/infusion/infusion-all.js"></script>
     <script src="../../lib/infusion/jqUnit.js"></script>
     <script src="../../dist/templates.js"></script>
     <script src="../../src/index.js"></script>
@@ -17,5 +17,6 @@
 </head>
 <body>
 <div id="qunit"></div>
+<div class='test' style='width:100px; height: 150px'></div>
 </body>
 </html>
