--- a/src/controllers/knob/knob.html
+++ b/src/controllers/knob/knob.html
@@ -1,4 +1,4 @@
-<div tabindex="0" class="sisiliano" role="slider" aria-label="Ring Slider" aria-valuemax="100" aria-valuemin="0">
+<div tabindex="0" class="fl-sisiliano" role="slider" aria-label="Ring Slider" aria-valuemax="100" aria-valuemin="0">
     <svg
             xmlns:osb="http://www.openswatchbook.org/uri/2009/osb"
             xmlns:dc="http://purl.org/dc/elements/1.1/"
@@ -77,31 +77,34 @@
         </defs>
 
         <style>
-            .knob-circle {
+            .fl-sisiliano-knob-circle {
                 filter: url("#filter6244");
             }
-            .sisiliano:focus .knob-circle {
+            .fl-sisiliano:focus .fl-sisiliano-knob-circle {
                 filter: url("#filter6245");
             }
         </style>
 
-        <g class="ctrl"
+        <g class="fl-sisiliano-knob"
            style="display:inline;animadtion: rotarIz 1.5s linear;">
-            <circle class="knob-circle knob-border-circle" r="147" cx="150" cy="150">
+            <circle
+                    class="fl-sisiliano-knob-circle fl-sisiliano-knob-border-circle"
+                    r="147" cx="150"
+                    cy="150">
             </circle>
             <circle
-                    class="knob-circle knob-background-circle"
+                    class="fl-sisiliano-knob-circle fl-sisiliano-knob-background-circle"
                     id="circle5634"
                     r="130"
                     cx="150"
                     cy="150"/>
             <text xmlns="http://www.w3.org/2000/svg" x="40" y="170"
                   role="alert" aria-live="assertive"
-                  class="unselectable value knob-value-text">
+                  class="unselectable value fl-sisiliano-knob-value-text">
                 100%
             </text>
             <circle
-                    class="knob-circle knob-value-circle"
+                    class="fl-sisiliano-knob-circle fl-sisiliano-knob-value-circle"
                     fill="transparent"
                     id="circle5636"
                     r="130"
