--- a/demo/piano.html
+++ b/demo/piano.html
@@ -6,6 +6,7 @@
     <link href="./source/dist/sisiliano.min.css" rel="stylesheet"/>
     <script src="./source/lib/infusion/infusion-all.js"></script>
     <script src="./source/lib/handlebars/handlebars-1.0.rc.2.js"></script>
+    <script src="./source/bower_components/d3/d3.js"></script>
     <script src="./source/dist/sisiliano.js"></script>
 
     <link href="./source/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
