--- a/src/controllers/knob/knob.html
+++ b/src/controllers/knob/knob.html
@@ -9,7 +9,8 @@
             xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
             viewBox="0 0 300 300"
             width="100%"
-            height="100%">
+            height="100%"
+            class="fl-sisiliano-knob">
         <defs
                 id="defs4">
             <filter
@@ -80,15 +81,14 @@
             .fl-sisiliano-knob-circle {
                 filter: url("#filter6244");
             }
-            .fl-sisiliano:focus .fl-sisiliano-knob-circle {
+            .fl-sisiliano-border, .fl-sisiliano:focus .fl-sisiliano-knob-circle {
                 filter: url("#filter6245");
             }
         </style>
 
-        <g class="fl-sisiliano-knob"
-           style="display:inline;animadtion: rotarIz 1.5s linear;">
+        <g style="display:inline">
             <circle
-                    class="fl-sisiliano-knob-circle fl-sisiliano-knob-border-circle"
+                    class="fl-sisiliano-border"
                     r="147" cx="150"
                     cy="150">
             </circle>
@@ -100,7 +100,7 @@
                     cy="150"/>
             <text xmlns="http://www.w3.org/2000/svg" x="40" y="170"
                   role="alert" aria-live="assertive"
-                  class="unselectable value fl-sisiliano-knob-value-text">
+                  class="unselectable fl-sisiliano-knob-value-text">
                 100%
             </text>
             <circle
