Task-14: [Knob] Separated the test cases of verifying events

--- a/test/html/index.html
+++ b/test/html/index.html
@@ -13,7 +13,8 @@
     <script src="../../src/controllers/piano/piano.js"></script>
     <script src="../spec/helpers.js"></script>
     <script src="../spec/knob.spec.js"></script>
-    <script src="../spec/piano.js"></script>
+    <script src="../spec/knob.events.spec.js"></script>
+    <script src="../spec/piano.spec.js"></script>
 </head>
 <body>
 <div id="qunit"></div>
