--- a/demo/knob.html
+++ b/demo/knob.html
@@ -2,17 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8"/>
-
     <link href="./source/dist/sisiliano.min.css" rel="stylesheet"/>
     <script src="./source/lib/infusion/infusion-all.js"></script>
     <script src="./source/lib/handlebars/handlebars-1.0.rc.2.js"></script>
     <script src="./source/bower_components/d3/d3.js"></script>
     <script src="./source/dist/sisiliano.js"></script>
-
     <link href="./source/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="./source/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet"/>
     <script src="./source/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
     <style>
         .description {
             padding: 5px;
@@ -65,8 +62,6 @@
     </style>
     <script>
         $(document).on('ready', function () {
-            //$('.svg').ringCtrl();
-
             var tds = $('.test');
             var colors = [
                 "#F44336", ,
@@ -93,23 +88,15 @@
             ];
             for (var i = 0; i < tds.length; i++) {
                 var randomColorIndex = Math.floor(Math.random() * colors.length - 1);
-                var elm = new fluid.sisiliano.knob(tds[i], {
+                fluid.sisiliano.knob(tds[i], {
                     color: colors[randomColorIndex],
                     value: Math.random() * 100
                 });
-                //$(tds[i]).css("background-color", colors[randomColorIndex - 1]);
             }
-
-            /*$(".test-outer").each(function() {
-             var randomColorIndex = Math.floor(Math.random() * colors.length - 1);
-             $(this).css("background-color", colors[randomColorIndex]);
-             });*/
-
         });
     </script>
 </head>
 <body>
-
 <div class="row introduction">
     <h1 class="introduction-title">Sisiliano</h1>
     <p>
@@ -128,7 +115,6 @@
     </p>
 </div>
 <div class="row demo">
-
     <div class="col-sm-4 description">
         <h1>Knob</h1>
         <ul>
@@ -136,10 +122,14 @@
             <li>Use arrow keys to control</li>
             <li>resize the window to test the Responsiveness</li>
         </ul>
-
+        <pre>
+            fluid.sisiliano.knob($('#elm'), {
+                color: "#FF0000",
+                value: 23
+            });
+        </pre>
         <br>
         <br>
-
         <button class="btn fn-btn">Read more</button>
         <button class="btn fn-btn">Try..</button>
     </div>
@@ -167,6 +157,5 @@
         <div class="col-xs-1 test" style="height: 50%"></div>
     </div>
 </div>
-
 </body>
 </html>
