--- a/demo/piano.html
+++ b/demo/piano.html
@@ -83,16 +83,44 @@
             //$('.svg').ringCtrl();
             window.AudioContext = window.AudioContext || window.webkitAudioContext;
             var context = new window.AudioContext();
+            var nodes = {};
+            if (context) {
+                var masterGain = context.createGain();
+                masterGain.gain.value = 0.3;
+                masterGain.connect(context.destination);
+            }
+
+            var playKey = function (index, frequency) {
+                var oscillator = context.createOscillator();
+                oscillator.type = "square";
+                oscillator.frequency.value = frequency;
+                oscillator.connect(masterGain);
+                oscillator.start(0);
+                nodes[index] = oscillator;
+            };
+
+            var releaseKey = function (index) {
+                var node = nodes[index];
+                if (node) {
+                    node.stop(0);
+                    node.disconnect();
+                    nodes[index] = null;
+                }
+            };
 
             var tds = $('.test');
             var colors = ['#009688', 'blue', 'yellow', 'red', 'orange', 'blue'];
             for (var i = 0; i < tds.length; i++) {
-                var elm = new fluid.sisiliano.piano($(tds[i]), {
+                var elm = fluid.sisiliano.piano($(tds[i]), {
                     color: colors[i],
-                    context: context,
-                    dataModel: {
-                        f: [1, 2, 3]
-                    }
+                    context: context
+                });
+
+                elm.events.onKeyPress.addListener(function (key, frequency) {
+                    playKey(key, frequency);
+                });
+                elm.events.onKeyRelease.addListener(function (key) {
+                    releaseKey(key);
                 });
             }
         });
