--- a/demo/piano.html
+++ b/demo/piano.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="utf-8"/>
     <link href="./source/dist/sisiliano.min.css" rel="stylesheet"/>
+    <link href="./source/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="./source/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet"/>
+    <link href="./source/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
+
     <script src="./source/lib/infusion/infusion-all.js"></script>
     <script src="./source/lib/handlebars/handlebars-1.0.rc.2.js"></script>
     <script src="./source/bower_components/d3/d3.js"></script>
     <script src="./source/dist/sisiliano.js"></script>
-    <link href="./source/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="./source/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet"/>
     <script src="./source/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <style>
+    <script src="./source/bower_components/ace-builds/src-noconflict/ace.js"></script>
+    <style type="text/css" media="screen">
+        #editor {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+        }
+
         .description {
             padding: 5px;
             /* background: rgba(0, 0, 0, 0.78); */
@@ -49,6 +60,9 @@
 
         .preview {
             padding: 15px;
+            border: solid 5px #272822;
+            background: white;
+            box-shadow: inset 0px 0px 10px 10px #272822;
         }
 
         .introduction {
@@ -58,6 +72,29 @@
 
         .introduction-title {
             font-size: 60px;
+        }
+
+        .play-btn {
+            color: white;
+            top: 70px;
+            position: relative;
+            z-index: 1000;
+            background-color: rgba(76, 175, 80, 0.49);
+            left: 40%;
+            font-size: 40px;
+            box-shadow: 0px 0px 20px 1px rgb(52, 89, 51);
+        }
+
+        .loading-animation {
+            font-size: 100px;
+            color: red;
+            position: relative;
+            top: 50px;
+            left: 40px;
+        }
+
+        .try-example {
+            padding: 10px;
         }
     </style>
     <script>
@@ -102,20 +139,32 @@
             };
 
             var tds = $('.test');
-            var colors = ['#009688', 'blue', 'yellow', 'red', 'orange', 'blue'];
+            var colors = ['#FF0000', 'blue', 'yellow', 'red', 'orange', 'blue'];
             for (var i = 0; i < tds.length; i++) {
-                var elm = fluid.sisiliano.piano($(tds[i]), {
-                    color: colors[i],
-                    context: context
-                });
-
-                elm.events.onKeyPress.addListener(function (key, frequency) {
-                    playKey(key, frequency);
-                });
-                elm.events.onKeyRelease.addListener(function (key) {
-                    releaseKey(key);
+                fluid.sisiliano.piano($(tds[i]), {
+                    model: {
+                        color: colors[i],
+                        viewBox: {
+                            width: 600,
+                            height: 170
+                        }
+                    },
+                    listeners: {
+                        onKeyPress: function (key, frequency) {
+                            playKey(key, frequency);
+                        },
+                        onKeyRelease: function (key) {
+                            releaseKey(key);
+                        }
+                    }
                 });
             }
+
+            $(".play-btn").on("click", function (evt) {
+                $("#preview").empty();
+                $("#preview").html("<div class='col-lg-12 text-center'><i class='loading-animation fa-li fa fa-spinner fa-spin'></i></div>");
+                eval(editor.getValue());
+            });
         });
     </script>
 </head>
@@ -138,37 +187,61 @@
     </p>
 </div>
 <div class="row demo">
-    <div class="col-sm-4 description">
-        <h1>Piano</h1>
-        This component was introduced for the purpose of testing the instruments created using flocking framework. So,
-        the
-        instrument created using the flocking shall be passed as parameter to the component. Also the primary color,
-        starting
-        note and the length of the piano also can be modified through parameters.
-        <br>
-        <br>
-        This component is fully responsive and developed using an SVG. Also this is also accessible via the keyboard.
-        So, the active area which can be controlled by the keyboard is highlighted in the piano. And the highlighted
-        area
-        can be moved to left and right using arrow keys.
-      <pre>
-        fluid.sisiliano.piano($('#elm'), {
-          instrument: instrument,
-          color: "#009688",
-          keyBoard: {
-            length: 50,
-            start: 3,
-          }
-        });
-      </pre>
-        <br>
-        <br>
-        <button class="btn fn-btn">Read more</button>
-        <button class="btn fn-btn">Try..</button>
+    <div class="col-sm-12 description">
+        <div class="col-sm-6">
+            <h1>Piano</h1>
+            This component was introduced for the purpose of testing the instruments created using flocking framework.
+            So,
+            the
+            instrument created using the flocking shall be passed as parameter to the component. Also the primary color,
+            starting
+            note and the length of the piano also can be modified through parameters.
+            <br>
+            <br>
+            This component is fully responsive and developed using an SVG. Also this is also accessible via the
+            keyboard.
+            So, the active area which can be controlled by the keyboard is highlighted in the piano. And the highlighted
+            area
+            can be moved to left and right using arrow keys.
+            <br>
+            <br>
+            <button class="btn fn-btn">Read more</button>
+        </div>
+        <div class="col-sm-6">
+            <div class="col-xs-12 test" style="height: 100%"></div>
+        </div>
     </div>
-    <div class="col-sm-8 preview">
-        <div class="col-xs-12 test" style="height: 100%"></div>
+    <div class="col-lg-12 try-example" style="min-height: 300px">
+        <div class="col-xs-6" style="min-height: 300px">
+            <div id="editor" class="col-sm-12" style="min-height: 300px">
+fluid.sisiliano.piano($('#preview'), {
+    model: {
+        color: "#FF0000"
+    },
+    listeners: {
+        onKeyPress: function (key, frequency) {
+            playKey(key, frequency);
+        },
+        onKeyRelease: function (key) {
+            releaseKey(key);
+        }
+    }
+});
+            </div>
+            <div class="btn play-btn glyphicon glyphicon-play">
+            </div>
+        </div>
+        <div class="col-xs-6 preview" id="preview" style="min-height: 300px;">
+        </div>
     </div>
 </div>
+
+
+<script>
+    var editor = ace.edit("editor");
+    editor.setTheme("ace/theme/monokai");
+    editor.getSession().setMode("ace/mode/javascript");
+</script>
+
 </body>
 </html>
