--- a/demo/knob.html
+++ b/demo/knob.html
@@ -121,7 +121,7 @@
             <div class="col-xs-1 test" style="height: 50%"></div>
         </div>
     </div>
-    <div class="col-lg-12 try-example" style="min-height: 300px">
+    <div class="col-sm-12 try-example" style="min-height: 300px">
         <div class="col-xs-6" style="min-height: 300px">
             <div id="editor" class="col-sm-12" style="min-height: 400px">
 fluid.sisiliano.knob($('#preview'), {
