[Knob] Updated the demo page according to the new changes of options

--- a/demo/knob.html
+++ b/demo/knob.html
@@ -46,8 +46,10 @@
             for (var i = 0; i < tds.length; i++) {
                 var randomColorIndex = Math.floor(Math.random() * colors.length - 1);
                 sisiliano.knob(tds[i], {
-                    color: colors[randomColorIndex],
-                    value: Math.random() * 100
+                    model: {
+                        color: colors[randomColorIndex],
+                        value: Math.random() * 100
+                    }
                 });
             }
 
