--- a/demo/piano.html
+++ b/demo/piano.html
@@ -130,7 +130,7 @@
             <div class="col-xs-12 test" style="height: 100%"></div>
         </div>
     </div>
-    <div class="col-sm-12 try-example" style="min-height: 300px">
+    <div class="col-sm-12 try-example" style="min-height: 300px; height: 300px">
         <div class="col-xs-6" style="min-height: 300px">
             <div id="editor" class="col-sm-12" style="min-height: 300px">
 sisiliano.piano($('#preview'), {
