--- a/demo/knob.html
+++ b/demo/knob.html
@@ -127,8 +127,10 @@
         <div class="col-xs-6" style="min-height: 300px">
             <div id="editor" class="col-sm-12" style="min-height: 400px">
 sisiliano.knob($('#preview'), {
-    color: "white",
-    value: 23
+    model: {
+        color: "white",
+        value: 23
+    }
 });
             </div>
             <div class="btn play-btn glyphicon glyphicon-play">
