--- a/test/html/index.html
+++ b/test/html/index.html
@@ -2,11 +2,23 @@
 <head>
     <link rel="stylesheet" href="../../bower_components/qunit/qunit/qunit.css">
     <link rel="stylesheet" href="../../dist/sisiliano.min.css">
+
+
+    <script src="../../bower_components/jquery-simulate-ext/libs/bililiteRange.js"></script>
     <script src="../../lib/infusion/infusion-all.js"></script>
+    <script src="../../bower_components/jquery-simulate-ext/libs/jquery.simulate.js"></script>
+    <script src="../../bower_components/jquery-simulate-ext/src/jquery.simulate.ext.js"></script>
+    <script src="../../bower_components/jquery-simulate-ext/src/jquery.simulate.drag-n-drop.js"></script>
+    <script src="../../bower_components/jquery-simulate-ext/src/jquery.simulate.key-sequence.js"></script>
+    <script src="../../bower_components/jquery-simulate-ext/src/jquery.simulate.key-combo.js"></script>
+
+
     <script src="../../lib/handlebars/handlebars-1.0.rc.2.js"></script>
     <script src="../../bower_components/d3/d3.min.js"></script>
     <script src="../../bower_components/qunit/qunit/qunit.js"></script>
     <script src="../../lib/infusion/jqUnit.js"></script>
+
+
     <script src="../../dist/templates.js"></script>
     <script src="../../src/index.js"></script>
     <script src="../../src/controllers/knob/knob.js"></script>
@@ -17,7 +29,7 @@
     <script src="../spec/piano.spec.js"></script>
 </head>
 <body>
-<div id="qunit"></div>
-<div class='test' style='width:100px; height: 150px'></div>
+<div id="qunit" style="height: 700px; overflow: auto"></div>
+<div class='test' style='width:100px; height: 200px'></div>
 </body>
 </html>
