--- a/demo/knob.html
+++ b/demo/knob.html
@@ -128,6 +128,8 @@
             <div id="editor" class="col-sm-12" style="min-height: 400px">
 sisiliano.knob($('#preview'), {
     model: {
+        min: 10,
+        max: 150,
         color: "white",
         value: 23
     }
