[Knob] Corrected the min and max value

--- a/src/controllers/knob/knob.html
+++ b/src/controllers/knob/knob.html
@@ -2,8 +2,8 @@
      class="sisiliano"
      role="slider"
      aria-label="{{title}} ,{{description}}"
-     aria-valuemax="{{min}}"
-     aria-valuemin="{{max}}">
+     aria-valuemax="{{max}}"
+     aria-valuemin="{{min}}">
     <svg
             xmlns:osb="http://www.openswatchbook.org/uri/2009/osb"
             xmlns:dc="http://purl.org/dc/elements/1.1/"
