--- a/test/html/index.html
+++ b/test/html/index.html
@@ -21,6 +21,7 @@
 
     <script src="../../dist/templates.js"></script>
     <script src="../../src/index.js"></script>
+    <script src="../../src/controllers/slider/slider.js"></script>
     <script src="../../src/controllers/knob/knob.js"></script>
     <script src="../../src/controllers/piano/piano.js"></script>
     <script src="../spec/helpers.js"></script>
