[Linear Slider] Updated test cases

--- a/test/html/index.html
+++ b/test/html/index.html
@@ -23,10 +23,12 @@
     <script src="../../src/index.js"></script>
     <script src="../../src/controllers/slider/slider.js"></script>
     <script src="../../src/controllers/knob/knob.js"></script>
+    <script src="../../src/controllers/linear-slider/linear-slider.js"></script>
     <script src="../../src/controllers/piano/piano.js"></script>
     <script src="../spec/helpers.js"></script>
+    <script src="../spec/slider.spec.js"></script>
     <script src="../spec/knob.spec.js"></script>
-    <script src="../spec/knob.events.spec.js"></script>
+    <script src="../spec/linear-slider.spec.js"></script>
     <script src="../spec/piano.spec.js"></script>
 </head>
 <body>
