--- a/demo/linear-slider.html
+++ b/demo/linear-slider.html
@@ -51,7 +51,6 @@
                         value: Math.random() * 100
                     }
                 });
-                $(tds[i]).append("<div class='sisiliano-linear-slider-value-text' style='color:" + colors[randomColorIndex] + "'></div>");
             }
 
             var editor = ace.edit("editor");
@@ -88,19 +87,13 @@
 </div>
 <div class="row demo">
     <div class="col-sm-12 description">
-        <div class="col-sm-6">
-            <h1>Knob</h1>
-            <ul>
-                <li>Click or use the tab to focus it</li>
-                <li>Use arrow keys to control</li>
-                <li>resize the window to test the Responsiveness</li>
-            </ul>
-            <br>
-            <br>
+        <div class="col-sm-4">
+            <h1>Linear Slider</h1>
+
             <button class="btn fn-btn">Read more</button>
             <button class="btn fn-btn">Try..</button>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-8">
             <div class="col-xs-12 test" style="height: 50%"></div>
             <div class="col-xs-6 test" style="height: 50%"></div>
             <div class="col-xs-6 test" style="height: 50%"></div>
