[Linear Slider] Added viewBox

--- a/src/controllers/linear-slider/linear-slider.html
+++ b/src/controllers/linear-slider/linear-slider.html
@@ -1,6 +1,6 @@
 <svg
         aria-hidden="true"
-        viewBox="0 0 500 80"
+        viewBox="0 0 {{viewBox.width}} {{viewBox.height}}"
         width="100%"
         height="100%"
         class="sisiliano-linear-slider">
