Added a new component to maintain the behavior of color inputs

--- a/test/html/index.html
+++ b/test/html/index.html
@@ -21,6 +21,9 @@
 
     <script src="../../dist/templates.js"></script>
     <script src="../../src/index.js"></script>
+    <script src="../../src/core/ariaDescription.js"></script>
+    <script src="../../src/core/colorable.js"></script>
+    <script src="../../src/core/component.js"></script>
     <script src="../../src/controllers/slider/slider.js"></script>
     <script src="../../src/controllers/knob/knob.js"></script>
     <script src="../../src/controllers/linear-slider/linear-slider.js"></script>
