#67: [Linear Slider] UI of slider ruler

--- a/src/controllers/linear-slider/linear-slider.html
+++ b/src/controllers/linear-slider/linear-slider.html
@@ -84,6 +84,7 @@
         }
     </style>
 
+    <g class="sisiliano-linear-slider-notches"></g>
     <rect
             class="sisiliano-linear-slider-rect sisiliano-linear-slider-background-rect"
             height="8"
