--- a/demo/linear-slider.html
+++ b/demo/linear-slider.html
@@ -94,23 +94,22 @@
             <button class="btn fn-btn">Try..</button>
         </div>
         <div class="col-sm-8">
-            <div class="col-xs-12 test" style="height: 50%"></div>
-            <div class="col-xs-6 test" style="height: 50%"></div>
-            <div class="col-xs-6 test" style="height: 50%"></div>
-            <div class="col-xs-4 test" style="height: 50%"></div>
-            <div class="col-xs-4 test" style="height: 50%"></div>
-            <div class="col-xs-4 test" style="height: 50%"></div>
-            <div class="col-xs-3 test" style="height: 50%"></div>
-            <div class="col-xs-3 test" style="height: 50%"></div>
-            <div class="col-xs-3 test" style="height: 50%"></div>
-            <div class="col-xs-3 test" style="height: 50%"></div>
-            <div class="col-xs-2 test" style="height: 50%"></div>
-            <div class="col-xs-2 test" style="height: 50%"></div>
-            <div class="col-xs-2 test" style="height: 50%"></div>
-            <div class="col-xs-2 test" style="height: 50%"></div>
-            <div class="col-xs-2 test" style="height: 50%"></div>
-            <div class="col-xs-2 test" style="height: 50%"></div>
-            <div class="col-xs-12 test" style="height: 50%"></div>
+            <div class="col-xs-12 test"></div>
+            <div class="col-xs-6 test"></div>
+            <div class="col-xs-6 test"></div>
+            <div class="col-xs-4 test"></div>
+            <div class="col-xs-4 test"></div>
+            <div class="col-xs-4 test"></div>
+            <div class="col-xs-3 test"></div>
+            <div class="col-xs-3 test"></div>
+            <div class="col-xs-3 test"></div>
+            <div class="col-xs-3 test"></div>
+
+            <div class="col-xs-12 test" style="height: 150px"></div>
+            <div class="col-xs-12 test" style="height: 120px"></div>
+            <div class="col-xs-12 test" style="height: 90px"></div>
+            <div class="col-xs-12 test" style="height: 60px"></div>
+            <div class="col-xs-12 test" style="height: 30px"></div>
         </div>
     </div>
     <div class="col-sm-12 try-example" style="min-height: 300px">
@@ -124,20 +123,32 @@ sisiliano.linearSlider($('#preview'), {
             pointer: {
                 label: {
                     padding: {
-                        top: 2,
-                        bottom: 2,
                         left: 2,
-                        right: 2
+                        right: 2,
+                        top: 2,
+                        bottom: 2
                     },
+                    margin: {
+                        left: 0,
+                        right: 0,
+                        top: 0,
+                        bottom: 10
+                    }
+                },
+                labelText: {
                     "font-size": "10px"
                 },
-                default: {
-                    rx: "16px",
-                    ry: "16px"
+                value: {
+                    width: 20,
+                    height: 20,
+                    rx: "10",
+                    ry: "10"
                 },
-                active: {
-                    rx: "25px",
-                    ry: "25px"
+                valueShadow: {
+                    width: 30,
+                    height: 30,
+                    rx: "15",
+                    ry: "15"
                 }
             },
             ruler: {
@@ -150,7 +161,18 @@ sisiliano.linearSlider($('#preview'), {
                 }
             },
             sliderBar: {
-                width: "10px",
+                valueBar: {
+                    height: 10
+                },
+                backgroundBar: {
+                    height: 8
+                },
+                padding: {
+                    left: 40,
+                    right: 40,
+                    top: 40,
+                    bottom: 40
+                }
             }
         }
     }
