[Piano] Updated the demo page

--- a/demo/piano.html
+++ b/demo/piano.html
@@ -135,7 +135,34 @@
             <div id="editor" class="col-sm-12" style="min-height: 300px">
 sisiliano.piano($('#preview'), {
     model: {
-        color: "#FF0000"
+        color: "#FF0000",
+        styles: {
+            keyBoard: {
+                padding: {
+                    top: 20,
+                    bottom: 20,
+                    left: 20,
+                    right: 20
+                },
+                whiteKey: {
+                    width: 40,
+                    height: 150
+                },
+                blackKey: {
+                    width: 27,
+                    height: 100
+                }
+            }
+        },
+        keyBoard: {
+            keys: [],
+            length: 36,
+            start: 0,
+            activeArea: {
+                start: 0,
+                end: 10
+            }
+        }
     },
     listeners: {
         onKeyPress: function (key, frequency) {
