[Linear Slider] Added rulerPoints to the demo code

--- a/demo/linear-slider.html
+++ b/demo/linear-slider.html
@@ -109,6 +109,7 @@ sisiliano.linearSlider($('#preview'), {
     model: {
         color: "green",
         value: 23,
+        rulerPoints: [0,  20, 30, 40, 50, 60, 70, 80, 90, 100],
         styles: {
             pointer: {
                 label: {
