[Linear Slider] Enabling more cutomization
* Code Refactoring
* Updated the demo page

--- a/demo/linear-slider.html
+++ b/demo/linear-slider.html
@@ -125,44 +125,87 @@ sisiliano.linearSlider($('#preview'), {
                         top: 0,
                         bottom: 10
                     }
+
+                    /* #### CSS classes ###
+                    class: "class-name1 class-name2"
+                    */
+
+                    /* ### CSS properties ###
+                    fill: "res"
+                    */
                 },
                 labelText: {
-                    "font-size": "10px"
+                    /* #### CSS classes ###
+                    class: "class-name1 class-name2"
+                    */
+
+                    /* ### CSS properties ###
+                    fill: "res"
+                    */
                 },
-                value: {
-                    width: 20,
-                    height: 20,
-                    rx: "10",
-                    ry: "10"
+                valuePointer: {
+                    /* #### CSS classes ###
+                    class: "class-name1 class-name2"
+                    */
+
+                    /* ### CSS properties ###
+                    fill: "res"
+                    */
                 },
-                valueShadow: {
-                    width: 30,
-                    height: 30,
-                    rx: "15",
-                    ry: "15"
+                valuePointerShadow: {
+                    /* #### CSS classes ###
+                    class: "class-name1 class-name2"
+                    */
+
+                    /* ### CSS properties ###
+                    fill: "res"
+                    */
                 }
             },
             ruler: {
                 line: {
-                    width: 1,
-                    height: 20
+                    /* #### CSS classes ###
+                    class: "class-name1 class-name2"
+                    */
+
+                    /* ### CSS properties ###
+                    fill: "res"
+                    */
                 },
                 value: {
-                    "font-size": "10px"
+                    /* #### CSS classes ###
+                    class: "class-name1 class-name2"
+                    */
+
+                    /* ### CSS properties ###
+                    fill: "res"
+                    */
                 }
             },
             sliderBar: {
                 valueBar: {
-                    height: 10
+                    /* #### CSS classes ###
+                    class: "class-name1 class-name2"
+                    */
+
+                    /* ### CSS properties ###
+                    fill: "res"
+                    */
                 },
                 backgroundBar: {
-                    height: 8
+                    /* #### CSS classes ###
+                    class: "class-name1 class-name2"
+                    */
+
+                    /* ### CSS properties ###
+                    fill: "res"
+                    */
                 },
                 padding: {
-                    left: 40,
-                    right: 40,
-                    top: 40,
-                    bottom: 40
+                    left: 80,
+                    right: 80,
+                    top: 80,
+                    bottom: 80
                 }
             }
         }
