--- a/demo/knob.html
+++ b/demo/knob.html
@@ -53,7 +53,7 @@
 
             $(".play-btn").on("click", function (evt) {
                 $("#preview").empty();
-                $("#preview").html("<div class='box text-center' style='width: 100%'><i class='loading-animation fa-li fa fa-spinner fa-spin'></i></div>");
+                $("#preview").html("<div class='box text-center' style='width: 100%'><i class='loading-animation'></i></div>");
                 eval(editor.getValue());
             });
             $(".play-btn").draggable({containment: "parent"});
@@ -159,7 +159,7 @@ sisiliano.knob($('#preview'), {
     }
 });
             </div>
-            <a class="box btn play-btn glyphicon glyphicon-play">
+            <a class="box play-btn">
                 Run
             </a>
         </div>
