--- a/demo/linear-slider.html
+++ b/demo/linear-slider.html
@@ -10,9 +10,7 @@
     <script src="./source/bower_components/d3/d3.js"></script>
     <script src="./source/dist/sisiliano.js"></script>
     <script src="./source/bower_components/ace-builds/src-noconflict/ace.js"></script>
-    <style>
 
-    </style>
     <script>
         $(document).on('ready', function () {
             var tds = $('.test');
@@ -56,7 +54,7 @@
 
             $(".play-btn").on("click", function (evt) {
                 $("#preview").empty();
-                $("#preview").html("<div class='box text-center' style='width: 100%'><i class='loading-animation fa-li fa fa-spinner fa-spin'></i></div>");
+                $("#preview").html("<div class='box text-center' style='width: 100%'><i class='loading-animation'></i></div>");
                 eval(editor.getValue());
             });
             $(".play-btn").draggable({containment: "parent"});
@@ -212,7 +210,7 @@ sisiliano.linearSlider($('#preview'), {
     }
 });
             </div>
-            <a class="box btn play-btn glyphicon glyphicon-play">
+            <a class="box play-btn">
                 Run
             </a>
         </div>
