[Documentation] Updated the fork-me badge

--- a/demo/knob.html
+++ b/demo/knob.html
@@ -63,8 +63,7 @@
 </head>
 <body>
 <a href="https://github.com/dinukadesilva/music-ctrls" class="fork-me">
-    <img src="./img/fork_me.png"
-         alt="Fork me on GitHub">
+    Fork me on GitHub
 </a>
 <div class="box introduction" style="width: 100%;">
     <h1 class="introduction-title">Sisiliano</h1>
